// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CategoriesPage should match snapshot and render CategoryTiles if the path is the root category 1`] = `
<React.Fragment>
  <Breadcrumbs
    locationName="Augsburg"
    parents={Array []}
  />
  <Tiles
    tiles={
      Array [
        TileModel {
          "_id": 3649,
          "_isExternalUrl": false,
          "_name": "Willkommen",
          "_path": "/augsburg/de/willkommen",
          "_thumbnail": "https://cms.integreat-ap…03/Beratung-150x150.png",
        },
        TileModel {
          "_id": 3650,
          "_isExternalUrl": false,
          "_name": "Anlaufstellen zu sonstigen Themen",
          "_path": "/augsburg/de/anlaufstellen",
          "_thumbnail": "https://cms.integreat-ap…/03/Hotline-150x150.png",
        },
      ]
    }
    title="Augsburg"
  />
</React.Fragment>
`;

exports[`CategoriesPage should match snapshot and render a Page if page has no children 1`] = `
<React.Fragment>
  <Breadcrumbs
    locationName="Augsburg"
    parents={
      Array [
        CategoryModel {
          "_availableLanguages": Object {},
          "_content": "",
          "_id": 0,
          "_order": -1,
          "_parentId": -1,
          "_parentUrl": "",
          "_thumbnail": "no_thumbnail",
          "_title": "augsburg",
          "_url": "/augsburg/de",
        },
        CategoryModel {
          "_availableLanguages": Object {
            "ar": 4819,
            "en": 4804,
            "fa": 4827,
          },
          "_content": "",
          "_id": 3649,
          "_order": 11,
          "_parentId": 0,
          "_parentUrl": "/augsburg/de",
          "_thumbnail": "https://cms.integreat-ap…03/Beratung-150x150.png",
          "_title": "Willkommen",
          "_url": "/augsburg/de/willkommen",
        },
      ]
    }
  />
  <Page
    content="some content"
    title="Willkommen in Augsburg"
  />
</React.Fragment>
`;

exports[`CategoriesPage should match snapshot and render an Error if path is not valid 1`] = `
<Translate(Failure)
  error="not-found:page.notFound"
/>
`;

exports[`CategoriesPage should match snapshot render a CategoryList if the category is neither the root nor has children 1`] = `
<React.Fragment>
  <Breadcrumbs
    locationName="Augsburg"
    parents={
      Array [
        CategoryModel {
          "_availableLanguages": Object {},
          "_content": "",
          "_id": 0,
          "_order": -1,
          "_parentId": -1,
          "_parentUrl": "",
          "_thumbnail": "no_thumbnail",
          "_title": "augsburg",
          "_url": "/augsburg/de",
        },
      ]
    }
  />
  <CategoryList
    categories={
      Array [
        Object {
          "children": Array [],
          "model": CategoryModel {
            "_availableLanguages": Object {
              "ar": 397,
              "de": 711,
              "en": 390,
            },
            "_content": "some content",
            "_id": 35,
            "_order": 1,
            "_parentId": 3649,
            "_parentUrl": "/augsburg/de/willkommen",
            "_thumbnail": "https://cms.integreat-ap…09/heart295-150x150.png",
            "_title": "Willkommen in Augsburg",
            "_url": "/augsburg/de/willkommen/willkommen-in-augsburg",
          },
        },
      ]
    }
    content=""
    title="Willkommen"
  />
</React.Fragment>
`;
